# lab5

./: CMakeLists.txt  abstract_operation.hpp  addition_operation.hpp  division_operation.hpp  main.cpp  multiplication_operation.hpp  operation.hpp  rpn_calculator.cpp  rpn_calculator.hpp  subtraction_operation.hpp
